  where one endpoint is a private (RFC 1918 section 3) or link-local (RFC 3927) IPv4 address continues to take the VLAN ID into
  account, as those addresses can be reused. To revert to the previous behavior and not reassemble fragments with different VLAN IDs,
  turn on the "Enable stricter conversation tracking heuristics" top level protocol preference.

// === Removed Features and Support

// === Removed Dissectors

// === New File Format Decoding Support

// [commaize]
// --
// --

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// "Full protocol name (Abbreviation)"
[commaize]
--
Bluetooth Link Manager Protocol (BT LMP)
Event Tracing for Windows (ETW)
Kerberos SPAKE
Linux psample protocol
Microsoft Task Scheduler Service
O-RAN fronthaul UC-plane (O-RAN)
Opus Interactive Audio Codec (OPUS)
PDU Transport Protocol
Real-Time Publish-Subscribe Wire Protocol (processed) (RTPS-PROC)
Real-Time Publish-Subscribe Virtual Transport (RTPS-VT)
Shared Memory Communications (SMC)
Signal PDU
SparkplugB
State Synchronization Protocol (SSyncP)
Tagged Image File Format (TIFF)
TP-Link Smart Home Protocol
R09.x (R09)
O-RAN E2AP
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

// === Major API Changes

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages.
You can usually install or upgrade Wireshark using the package management system specific to that platform.
A list of third-party packages can be found on the